@@ -1,3 +1,8 @@
+2015-01-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/64734
+	* libgomp.c/pr64734.c: New test.
+
 2014-12-03  Uros Bizjak  <ubizjak@gmail.com>
 
 	* configure.tgt (x86_64-*-linux*): Tune -m32 multilib to generic.
